Bug 162927 - Hiding Page, List and Table styles should also hide them from the style list
Summary: Hiding Page, List and Table styles should also hide them from the style list
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium minor
Assignee: Heiko Tietze
URL:
Whiteboard: target:25.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-09-12 08:55 UTC by Buovjaga
Modified: 2024-09-17 17:56 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2024-09-12 08:55:27 UTC
Follow-up to bug 119919, which broke this behaviour.
Comment 1 Commit Notification 2024-09-16 08:08:29 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0a39eb2f583ed25e1ab51a18e2fb3419775d68dc

Resolves tdf#162927 - Hiding non-hierarchical styles should not just dim it

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Buovjaga 2024-09-17 17:56:13 UTC
Verified, thanks.

Arch Linux 64-bit
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 45399721e1497bc9731eacc1b001335ef4314579
CPU threads: 8; OS: Linux 6.10; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 17 September 2024