Resolves tdf#162927 - Hiding non-hierarchical styles should not just dim it

Also show hidden styles with normal font color if the view mode
is not hierarchical

Change-Id: I4cc5ca7441294302b3e751c5fa49a2f3579b3c6b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173334
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins